@@ -1,7 +1,5 @@
 package com.example.oasisdocument.controller;
 
-import com.alibaba.fastjson.JSON;
-import com.alibaba.fastjson.JSONArray;
 import com.alibaba.fastjson.JSONObject;
 import com.example.oasisdocument.docs.Paper;
 import com.example.oasisdocument.exceptions.BadReqException;
@@ -13,10 +11,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
 import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @RestController
@@ -36,29 +35,33 @@ public class PaperController {
 
     //初次数据查询
     @GetMapping("/paper/list")
-    public JSONObject queryPaper(HttpServletRequest request,
-                                 @RequestParam(name = "query") String query,
-                                 @RequestParam(name = "returnFacets") String returnFacets,
-                                 @RequestParam(name = "pageNum", defaultValue = "0") int pageNum,
-                                 @RequestParam(name = "pageSize", defaultValue = "10") int pageSize) {
+    public JSONObject queryPaper(
+            @RequestParam(name = "query") String query,
+            @RequestParam(name = "returnFacets") String returnFacets,
+            @RequestParam(name = "pageNum", defaultValue = "0") int pageNum,
+            @RequestParam(name = "pageSize", defaultValue = "10") int pageSize,
+            HttpServletRequest request) {
+        //set id
+        String qid = UUID.randomUUID().toString().replaceAll("-", "");
+        ;
         HttpSession session = request.getSession();
-        List<String> keys = Arrays.asList(query.split(" ")).stream()
-                .filter((String s) -> !s.isBlank()).collect(Collectors.toList());
-        assert keys.size() >= 1;
-        List<Paper> list = paperService.queryPaper(keys, returnFacets.toLowerCase());
-        if (list.isEmpty()) return JSONArray.parseObject(JSON.toJSONString(list));
+//        List<String> keys = Arrays.stream(query.split(" "))
+//                .filter((String s) -> !s.trim().isEmpty()).collect(Collectors.toList());
+//        assert keys.size() >= 1;
+        List<Paper> list = paperService.queryPaper(query, returnFacets.toLowerCase());
+        session.setAttribute(qid, list);
+        if (list.isEmpty()) {
+            JSONObject object = new JSONObject();
+            object.put("papers", list);
+            object.put("qid", qid);
+            return object;
+        }
         //分页
         List<Paper> pagedList = pageHelper.of(list, pageSize, pageNum);
         if (null == pagedList) throw new BadReqException();
-        //根据ip进行session存储
-        session.setAttribute(request.getRemoteAddr(), list);
-        session.setAttribute(request.getRemoteAddr() + "reqinfo",
-                request.getParameterMap());
-        //装配
-        JSONObject summary = paperService.papersSummary(list);
         JSONObject ans = new JSONObject();
-        ans.put("summary", summary);
         ans.put("papers", pagedList);
+        ans.put("qid", qid);
         return ans;
     }
 
@@ -68,24 +71,24 @@ public class PaperController {
      * @param refinements : 新的限制. year , title , conferences , terms , keywords , authors , affiliations
      */
     @GetMapping("/paper/refine")
-    public JSONArray queryPaperRefine(HttpServletRequest request,
-                                      @RequestParam(name = "refinements") List<String> refinements) throws Exception {
+    public List<Paper> queryPaperRefine(@RequestParam(name = "qid") String qid,
+                                        @RequestParam(name = "refinements") List<String> refinements,
+                                        @RequestParam(name = "pageNum", defaultValue = "0") int pageNum,
+                                        @RequestParam(name = "pageSize", defaultValue = "10") int pageSize,
+                                        HttpServletRequest request) throws Exception {
         HttpSession session = request.getSession();
         try {
             //查询全集
-            List<Paper> list = (List<Paper>) session.getAttribute(request.getRemoteAddr());
-            Map<String, String[]> params =
-                    (Map<String, String[]>) session.getAttribute(request.getRemoteAddr() + "reqinfo");
+            List<Paper> list = (List<Paper>) session.getAttribute(qid);
             //添加新限制
             list = paperService.queryPaperRefine(list, refinements);
             if (list.isEmpty()) {
-                return new JSONArray();
+                return list;
             }
-            int pageNum = Integer.parseInt(params.getOrDefault("pageNum", new String[]{"0"})[0]),
-                    pageSize = Integer.parseInt(params.getOrDefault("pageSize", new String[]{"10"})[0]);
+            //需要用到分页信息
             List<Paper> ans = pageHelper.of(list, pageSize, pageNum);
             if (null == ans) throw new BadReqException();
-            return JSONArray.parseArray(JSON.toJSONString(ans));
+            return ans;
         } catch (BadReqException e) {
             throw e;
         } catch (RuntimeException e) {
@@ -101,4 +104,11 @@ public class PaperController {
         paperService.insert(entity);
     }
 
+    @GetMapping(path = "/paper/summary")
+    public JSONObject getPaperSummary(@RequestParam(name = "qid") String qid,
+                                      HttpServletRequest request) {
+        //fetch list
+        List<Paper> list = (List<Paper>) request.getSession().getAttribute(qid);
+        return paperService.papersSummary(list);
+    }
 }
